@@ -1,3 +1,7 @@
+2013-08-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* debug.c (print_memory): Fix whitespace / indentation.
+
 2013-07-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* io.c (FAKE_FD_VALUE): Move definition from here ...
